--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/slidevjs/slidev/assets/favicon.png">
 
-  <script type="module" crossorigin src="/assets/index.85700ad4.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.f2d0fc10.js">
-  <link rel="stylesheet" href="/assets/vendor.bad2a399.css">
+  <script type="module" crossorigin src="/node-troubleshooting-talk/assets/index.1adee8fd.js"></script>
+  <link rel="modulepreload" href="/node-troubleshooting-talk/assets/vendor.87db79cd.js">
+  <link rel="stylesheet" href="/node-troubleshooting-talk/assets/vendor.9b2b000a.css">
 </head>
 <body>
   <div id="app"></div>
